<resources>
    <string name="app_name">ingenieriaTrading</string>
    <string name="title_activity_login">Inicia sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Usuario invalido</string>
    <string name="error_invalid_password">El password es muy corta</string>
    <string name="error_incorrect_password">El password es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_sign_in">Email</string>
    <string name="password_sign_in">Password</string>
    <string name="password_dos_sign_in">Confirme su password porfavor</string>
    <string name="nombre_sign_in">Nombre</string>
    <string name="apellidos_sign_in">Apellidos</string>
    <string name="celular_sign_in">Celular</string>
    <string name="usuario_sign_in">Usuario</string>
    <string name="registrar_btn_sign_in">Registrar</string>
</resources>
