<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ingenieriatrading.myapp.RegistroActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_email"
            android:hint="@string/email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/et_password_confirmacion"
            android:hint="@string/password_dos_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/et_usuario"
            android:hint="@string/usuario_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/et_nombres"
            android:hint="@string/nombre_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/et_apellido"
            android:hint="@string/apellidos_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/et_celular"
            android:hint="@string/celular_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_bottom"/>
        <Button
            android:id="@+id/btn_registrar"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/registrar_btn_sign_in"
            android:textStyle="bold" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
